samples/_failures_safe/1761371246_003e33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cefbff4.c: In function ‘main’:
./samples/SAFE/__tmp_3cefbff4.c:150:5: error: expected ‘,’ or ‘;’ at end of input
  150 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_3cefbff4.c:150:5: error: expected declaration or statement at end of input
